feat: show random number of clues